# PowerHub

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  changelog.md  index.html  ph  powerhub.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_powerhub.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yaml
2.0.0/: .buildinfo  changelog.html  contrib.html  evasion.html  genindex.html  index.html  installation.html  new.html  objects.inv  philosophy.html  search.html  searchindex.js  troubleshooting.html  usage.html
2.0.0/.doctrees/: environment.pickle  evasion.doctree  index.doctree  philosophy.doctree  troubleshooting.doctree
2.0.0/_sources/: contrib.md.txt
2.0.1/: .buildinfo  changelog.html  contrib.html  evasion.html  genindex.html  index.html  installation.html  new.html  philosophy.html  search.html  troubleshooting.html  usage.html
2.0.1/.doctrees/: environment.pickle  philosophy.doctree  troubleshooting.doctree  usage.doctree
2.0.1/_sources/: index.md.txt  usage.md.txt
2.0.2/: changelog.html  evasion.html  index.html  new.html  usage.html
2.0.2/.doctrees/: environment.pickle  index.doctree  new.doctree  usage.doctree
2.0.2/_sources/: new.md.txt  usage.md.txt
2.0.3/: .buildinfo  index.html  installation.html  new.html  search.html  searchindex.js
2.0.3/.doctrees/: changelog.doctree  environment.pickle
2.0.4/: .buildinfo  changelog.html  contrib.html  evasion.html  genindex.html  new.html  objects.inv  philosophy.html  search.html  searchindex.js  troubleshooting.html  usage.html
2.0.4/.doctrees/: changelog.doctree  environment.pickle  usage.doctree
2.0.5/: contrib.html  index.html  installation.html  new.html  troubleshooting.html
2.0.5/.doctrees/: environment.pickle
2.0.5/_static/: documentation_options.js
2.0.6/: .buildinfo  changelog.html  contrib.html  evasion.html  index.html  installation.html  new.html  objects.inv  troubleshooting.html  usage.html
2.0.6/.doctrees/: contrib.doctree  environment.pickle  installation.doctree
2.0.6/_static/: documentation_options.js
2.0.7/: changelog.html  evasion.html  index.html  installation.html  new.html  philosophy.html  searchindex.js  usage.html
2.0.7/.doctrees/: changelog.doctree  environment.pickle
2.0.7/_static/: custom.css  documentation_options.js  solarized.css
2.0.8/: .buildinfo  changelog.html  contrib.html  evasion.html  genindex.html  index.html  installation.html  new.html  philosophy.html  search.html  searchindex.js  troubleshooting.html  usage.html
2.0.8/.doctrees/: changelog.doctree  environment.pickle
2.0.8/_static/: documentation_options.js
2.0.9/: .buildinfo  changelog.html  evasion.html  philosophy.html  search.html  searchindex.js  troubleshooting.html  usage.html
2.0.9/.doctrees/: environment.pickle  index.doctree
2.0.9/_sources/: installation.md.txt
2.0.9/_static/: documentation_options.js
docs/: conf.py  contrib.md  evasion.md  index.md  installation.md  new.md  philosophy.md  requirements.txt  troubleshooting.md  usage.md
docs/_templates/: layout.html  versions.html
master/: .buildinfo  changelog.html  contrib.html  evasion.html  genindex.html  index.html  installation.html  new.html  objects.inv  philosophy.html  search.html  searchindex.js  troubleshooting.html  usage.html
master/.doctrees/: changelog.doctree  contrib.doctree  environment.pickle  evasion.doctree  index.doctree  installation.doctree  new.doctree  troubleshooting.doctree  usage.doctree
master/_sources/: contrib.md.txt  evasion.md.txt  new.md.txt  troubleshooting.md.txt  usage.md.txt
master/_static/: documentation_options.js
powerhub/: __init__.py  __main__.py  _version.py  app.py  args.py  auth.py  av_evasion.py  clipboard.py  dhkex.py  directories.py  env.py  flask.py  hiddenapp.py  logging.py  loot.py  modules.py  obfuscation.py  parameters.py  payloads.py  po_args.py  powerhub.py  receiver.py  repos.py  reverseproxy.py  rshell.py  settings.py  sql.py  stager.py  tools.py  upload.py  urls.py  variables.txt  views.py  webdav.py  wsgi.py
powerhub/builtin/: Invoke-ReflectivePEInjection.ps1
powerhub/decoy/: M365DSCAgent.psm1  M365DSCCheckProperties.psm1  M365DSCDocGenerator.psm1  M365DSCErrorHandler.psm1  M365DSCExoResourceUtils.psm1  M365DSCLogEngine.psm1  M365DSCPermissions.psm1  M365DSCReport.psm1  M365DSCResourceGenerator.psm1  M365DSCReverse.psm1  M365DSCStringEncoding.psm1  M365DSCStubsUtility.psm1  M365DSCTelemetryEngine.psm1  M365DSCUtil.psm1  MSFT_AADAdministrativeUnit.psm1  MSFT_AADApplication.psm1  MSFT_AADAuthorizationPolicy.psm1  MSFT_AADConditionalAccessPolicy.psm1  MSFT_AADEntitlementManagementAccessPackage.psm1  MSFT_AADEntitlementManagementAccessPackageCatalog.psm1  MSFT_AADEntitlementManagementAccessPackageCatalogResource.psm1  MSFT_AADGroup.psm1  MSFT_AADGroupLifecyclePolicy.psm1  MSFT_AADGroupsNamingPolicy.psm1  MSFT_AADGroupsSettings.psm1  MSFT_AADNamedLocationPolicy.psm1  MSFT_AADRoleDefinition.psm1  MSFT_AADRoleSetting.psm1  MSFT_AADSecurityDefaults.psm1  MSFT_AADServicePrincipal.psm1  MSFT_AADTenantDetails.psm1  MSFT_AADTokenLifetimePolicy.psm1  MSFT_AADUser.psm1  MSFT_EXOAcceptedDomain.psm1  MSFT_EXOActiveSyncDeviceAccessRule.psm1  MSFT_EXOAddressBookPolicy.psm1  (+188 more)
tests/: test_fullapp.py  test_payloads.py  test_po.py  test_powerhub.py
(+82 files in other folders)
