[metadata]
name = powerhub
summary = A post exploitation tool based on a web application, focusing on bypassing endpoint protection and application whitelisting
description_file = README.md
version = attr: powerhub.__version__
author = Adrian Vollmer
author_email = computerfluesterer@protonmail.com
home_page = https://github.com/AdrianVollmer/PowerHub
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[tool.setuptools]
package-data = {"powerhub" = ["**"]}

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version<"3.8"
    cheroot
    cryptography
    Flask>=1.0.2
    Flask-SocketIO>=3.1.2
    flask-sqlalchemy>=2.1
    Jinja2>=3.0
    pyOpenSSL
    python-magic
    service_identity
    twisted>=18.9.0
    watchdog
    werkzeug>=0.15
    wsgidav>=3.0.0

[options.entry_points]
console_scripts =
    powerhub = powerhub.__main__:main
    power-obfuscate = powerhub.__main__:power_obfuscate

[mypy]
python_version = 3.8
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
builtins = unicode
max-line-length = 100

[tool:pytest]
norecursedirs = tests/helpers
filterwarnings =
    ignore::DeprecationWarning

[tox:tox]
envlist = py39,py310

[testenv]
extras = tests
commands = pytest
deps = .[tests]
